--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -210,6 +210,7 @@
 	<string id="51011">Delete Rom Collection</string>
 	<string id="51012">Clean Database</string>
 	<string id="51013">Open Addon Settings</string>
+	<string id="51014">Set Gameclient (per Game)</string>
 	
 	<!-- editromcollection -->
 	<string id="52000">Configuration</string>
