--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2.0.11 (10/2013)
+~~~~~~~~~~~~~
+General:
+  * configure RetroPlayer support per config wizard and UI
+
 2.0.10 (09/2013)
 ~~~~~~~~~~~~~
 General:
