--- a/resources/language/Greek/strings.xml
+++ b/resources/language/Greek/strings.xml
@@ -154,6 +154,12 @@
     <string id="40095">Καθυστέρηση Μετά την Έναρξη (ms)</string>
     <string id="40096">Καθυστέρηση έναρξης λειτουργίας solo (ms)</string>
     <string id="40097">Χρήση VB script στη λειτουργία solo (μόνο για Windows)</string>
+    <string id="40098">Χρήση του RetroPlayer για εκκίνηση παιχνιδιών;</string>
+    <string id="40099">Αναστολή του Ήχου</string>
+    <string id="40100">Ελαχιστοποίηση του XBMC</string>
+    <string id="40101">Διαδρομή του emu_autoconfig.xml</string>
+    <string id="40102">%s (Εγκαταστάθηκε)</string>
+    <string id="40103">Διαθέσιμοι εξομοιωτές autoconfig</string>
 
     <!-- Settings -->
     <string id="45000">Γενικά</string>
@@ -215,6 +221,7 @@
     <string id="51011">Διαγραφή Συλλογής Rom</string>
     <string id="51012">Εκκαθάριση Βάσης Δεδομένων</string>
     <string id="51013">Άνοιγμα Ρυθμίσεων Πρόσθετου</string>
+    <string id="51014">Ορισμός Πελάτη Παιχνιδιών (ανά Παιχνίδι)</string>
 
     <!-- editromcollection -->
     <string id="52000">Διαμόρφωση</string>
@@ -253,6 +260,9 @@
     <string id="52033">Εντολή Μετά την Έναρξη</string>
     <string id="52034">Αποθήκευση Διαμόρφωσης</string>
     <string id="52035">Ακύρωση</string>
+    <string id="52036">Αυτόματη Αναπαραγωγή Βίντεο (Παράθυρο Πληροφοριών)</string>
+    <string id="52037">Χρήση RetroPlayer</string>
+    <string id="52038">Πελάτης Παιχνιδιών</string>
 
     <!-- editscraper -->
     <string id="53000">Scraper χωρίς σύνδεση</string>
