--- a/resources/language/Portuguese/strings.xml
+++ b/resources/language/Portuguese/strings.xml
@@ -20,7 +20,7 @@
     <string id="35010">Erro: Não foi possível criar pasta de artwork.</string>
     <string id="35011">Veja o xbmc.log para mais detalhes.</string>
     <string id="35012">Erro: Não foi possível criar o ficheiro de artwork</string>
-    <string id="35013">Erro ao obter conteúdo de scraper para o jogo</string>
+    <string id="35013">Erro ao obter conteúdo do colector para o jogo</string>
     <string id="35014">Não é possível carregar o jogo seleccionado</string>
     <string id="35015">Erro na Edição de Comando de Jogo</string>
     <string id="35016">Erro ao Adicionar a Favoritos</string>
@@ -35,7 +35,7 @@
     <string id="35025">O Controlo com id: %s não foi encontrado. Veja o ficheiro WindowXML.</string>
 
     <!-- <string id="35026">Site %s does not exist in config.xml</string> -->
-    <string id="35027">Cannot scrape %s games with %s scraper.[CR]Invalid combination of scraper settings.</string>
+    <string id="35027">Não é possível analisar os jogos %s com o colector %s.[CR]É uma combinação inválida de definições de colector.</string>
 
     <!-- <string id="35028"></string> -->
     <!-- <string id="35029">can't be used together with offline scrapers.)</string> -->
@@ -99,11 +99,11 @@
     <string id="40041">Localização</string>
     <string id="40042">Escolha uma localização de média para adicionar</string>
     <string id="40043">Escolha uma localização de média para remover</string>
-    <string id="40044">Já existem scrapers para todas as Colecções de Roms</string>
-    <string id="40045">Editar ou apagar um scraper existente</string>
-    <string id="40046">Seleccione o nome do scraper</string>
-    <string id="40047">Escolha um scraper para remover</string>
-    <string id="40048">O Scraper %s já está a ser usado e não pode ser apagado.</string>
+    <string id="40044">Já existem colectores para todas as Colecções de Roms</string>
+    <string id="40045">Editar ou apagar um colector existente</string>
+    <string id="40046">Seleccione o nome do colector</string>
+    <string id="40047">Escolha um colector para remover</string>
+    <string id="40048">O colector %s já está a ser usado e não pode ser apagado.</string>
 
     <!-- <string id="40049">Please choose another one.</string> -->
     <!-- <string id="40050">Automatic: Accurate</string> -->
@@ -114,7 +114,7 @@
     <string id="40055">Seleccione o tipo de Artwork</string>
     <string id="40056">Seleccionar propriedade</string>
     <string id="40057">ignorar</string>
-    <string id="40058">filtro para ignorar</string>
+    <string id="40058">Ignorar filtro</string>
     <string id="40059">exibir</string>
     <string id="40060">Exibir apenas jogos com itens em falta</string>
     <string id="40061">ocultar</string>
@@ -131,20 +131,20 @@
     <string id="40072">Acção cancelada. Config.xml não será modificado.</string>
     <string id="40073">Escolha um cenário</string>
     <string id="40074">Procurar info e artwork do jogo na Internet</string>
-    <string id="40075">Info do Jogo e artwork estão disponíveis localmente</string>
+    <string id="40075">Info e artwork do jogo disponíveis localmente</string>
     <string id="40076">Escolher uma plataforma</string>
     <string id="40077">Introduza o nome da plataforma</string>
     <string id="40078">Localização do Emulador %s</string>
     <string id="40079">Parâmetros do emulador ("%ROM%" é usado para os seus ficheiros rom)</string>
     <string id="40080">Localização dos Roms %s</string>
-    <string id="40081">Máscara de ficheiro (separadas por vírgula): exemplo *.zip,*.smc</string>
+    <string id="40081">Máscara de ficheiro (separar c/ vírgula) p. ex. *.zip,*.smc</string>
     <string id="40082">%s Artwork (%s)</string>
     <string id="40083">Escolha um tipo de artwork</string>
     <string id="40084">Quer adicionar outra Localização De Artwork?</string>
     <string id="40085">Estrutura das suas descrições de jogos</string>
     <string id="40086">Um ficheiro de descrição por jogo</string>
     <string id="40087">Um ficheiro de descrição para todos os jogos</string>
-    <string id="40088">Obter info de scrapers (ou usar info local)</string>
+    <string id="40088">Obter info de colectores (ou usar info local)</string>
     <string id="40089">%s descrição do jogo</string>
     <string id="40090">Introduza a máscara de ficheiro para descrição</string>
     <string id="40091">instrucçã de análise %s</string>
@@ -154,6 +154,12 @@
     <string id="40095">Atraso de Pós-Inicialização (ms)</string>
     <string id="40096">Atraso ao iniciar modo solo (ms)</string>
     <string id="40097">Usar script VB em modo solo (apenas Windows)</string>
+    <string id="40098">Usar RetroPlayer para iniciar os jogos?</string>
+    <string id="40099">Suspender Áudio</string>
+    <string id="40100">Minimizar o XBMC</string>
+    <string id="40101">Localização de emu_autoconfig.xml</string>
+    <string id="40102">%s (Instalado)</string>
+    <string id="40103">Emuladores autoconfig disponíveis</string>
 
     <!-- Settings -->
     <string id="45000">Menus</string>
@@ -161,13 +167,13 @@
     <string id="45002">Nível de log</string>
     <string id="45003">Opção de cache</string>
     <string id="45004">Guardar modo de vista ao sair</string>
-    <string id="45005">Guardar modo de vista ao iniciar emul.</string>
+    <string id="45005">Guardar modo de vista ao iniciar emulação</string>
     <string id="45006">Importar Jogos</string>
     <string id="45007">Importar jogos ao iniciar o XBMC</string>
     <string id="45008">Exibir janela de opções de importação</string>
-    <string id="45009">Modo do scraper</string>
+    <string id="45009">Modo do colector</string>
     <string id="45010">Factor de incerteza ao corresponder jogos</string>
-    <string id="45011">Criar ficheiro nfo local ao transferir dados</string>
+    <string id="45011">Criar ficheiro nfo local ao obter dados do colector</string>
     <string id="45012">Não importar jogos sem descrição</string>
     <string id="45013">Não importar jogos sem artwork</string>
     <string id="45014">Transferir informação para jogos já importados</string>
@@ -180,7 +186,7 @@
     <string id="45021">Exibir filtro Todos os Géneros</string>
     <string id="45022">Exibir filtro Todos os Anos</string>
     <string id="45023">Exibir filtro Todas as Editoras</string>
-    <string id="45024">Exibir todas personagens no filtro</string>
+    <string id="45024">Exibir filtro Todos os Caracteres</string>
     <string id="45025">Evitar procuras sem filtro</string>
     <string id="45026">Iniciar Jogos</string>
     <string id="45027">Cmd ao sair do emulador</string>
@@ -196,7 +202,7 @@
     <string id="50006">Consola</string>
     <string id="50007">A-Z</string>
     <string id="50008">Ver</string>
-    <string id="50009">Filtrar informação em falta</string>
+    <string id="50009">Filtro info em falta</string>
     <string id="50010">Itens</string>
     <string id="50011">Página</string>
 
@@ -206,66 +212,70 @@
     <string id="51002">Reanalisar Selecção</string>
     <string id="51003">Adicionar Colecção de Roms</string>
     <string id="51004">Editar Colecção de Roms</string>
-    <string id="51005">Editar Scrapers Offline</string>
+    <string id="51005">Editar Colectores Offline</string>
     <string id="51006">Editar Comando de Jogo</string>
-    <string id="51007">Adicionar Jogo Aos Favoritos</string>
-    <string id="51008">Adicionar Selecção Aos Favoritos</string>
-    <string id="51009">Exportar base de dados de jogos (ficheiros nfo)</string>
+    <string id="51007">Adicionar Jogo A Favoritos</string>
+    <string id="51008">Adicionar Selecção A Favoritos</string>
+    <string id="51009">Exportar dados de jogos (ficheiros nfo)</string>
     <string id="51010">Apagar Jogo</string>
     <string id="51011">Apagar Colecção de Roms</string>
     <string id="51012">Limpar a Base de Dados</string>
-    <string id="51013">Abrir as Definições do Addon</string>
+    <string id="51013">Abrir Definições do Addon</string>
+    <string id="51014">Definir Gameclient (por Jogo)</string>
 
     <!-- editromcollection -->
     <string id="52000">Configuração</string>
     <string id="52001">Colecção de Roms</string>
     <string id="52002">Importar Jogos</string>
-    <string id="52003">Importar Dados de Jogo</string>
+    <string id="52003">Importar Dados Jogos</string>
     <string id="52004">Navegar Jogos</string>
     <string id="52005">Iniciar Jogos</string>
     <string id="52006">Localização de Roms</string>
-    <string id="52007">Máscara de ficheiro de Rom</string>
+    <string id="52007">Máscara de Rom</string>
     <string id="52008">Ignorar Ao Analisar</string>
     <string id="52009">Permitir Actualização</string>
-    <string id="52010">Profundidade Máx. de Pastas</string>
+    <string id="52010">Máx. Nível Pastas</string>
     <string id="52011">Indicador do Disco</string>
     <string id="52012">Usar Nome da Pasta como Nome do Jogo</string>
-    <string id="52013">Scraper 1</string>
-    <string id="52014">Scraper 2</string>
-    <string id="52015">Scraper 3</string>
+    <string id="52013">Colector 1</string>
+    <string id="52014">Colector 2</string>
+    <string id="52015">Colector 3</string>
     <string id="52016">Tipo de Média</string>
-    <string id="52017">Localização de Média</string>
-    <string id="52018">Máscara de ficheiro de média</string>
+    <string id="52017">Localização Média</string>
+    <string id="52018">Máscara de Média</string>
     <string id="52019">Remover Localização de Média</string>
     <string id="52020">Adicionar Localização de Média</string>
     <string id="52021">Imagens (Janela Principal)</string>
     <string id="52022">Imagens (Janela de Info)</string>
     <string id="52023">Iniciar Automaticamente o Vídeo (Janela Principal)</string>
     <string id="52024">Cmd do Emulador</string>
-    <string id="52025">Parâmetros do Emulador</string>
+    <string id="52025">Parâmetros Emul</string>
     <string id="52026">Usar Emulador em Modo Solo</string>
     <string id="52027">Usar Popen Para Executar o Emulador</string>
     <string id="52028">Não Extrair Ficheiros Zip</string>
-    <string id="52029">Localização Dos Jogos Guardados</string>
-    <string id="52030">Máscara de ficheiro do Jogo Guardado</string>
-    <string id="52031">Parâmetros Dos Jogos Guardados</string>
-    <string id="52032">Cmd De Pré-Inicialização</string>
-    <string id="52033">Cmd De Pós-Inicialização</string>
+    <string id="52029">Jogos Guardados</string>
+    <string id="52030">Máscara Jogo Guardado</string>
+    <string id="52031">Parâm. Jogos Guardados</string>
+    <string id="52032">Cmd Pré-Inicialização</string>
+    <string id="52033">Cmd Pós-Inicialização</string>
     <string id="52034">Guardar Config</string>
     <string id="52035">Cancelar</string>
+    <string id="52036">Iniciar Automaticamente o Vídeo (Janela de Info)</string>
+    <string id="52037">Usar RetroPlayer</string>
+    <string id="52038">Gameclient</string>
 
     <!-- editscraper -->
-    <string id="53000">Scrapers Offline</string>
-    <string id="53001">Scraper</string>
+    <string id="53000">Colectores Offline</string>
+    <string id="53001">Colector</string>
     <string id="53002">Usar uma descrição por jogo</string>
-    <string id="53003">Localização da descrição do jogo</string>
-    <string id="53004">Máscara de ficheiro na descrição do jogo</string>
+    <string id="53003">Pasta de descrições</string>
+    <string id="53004">Máscara da descrição</string>
     <string id="53005">Instrucção de análise</string>
     <string id="53006">Procurar jogo por crc</string>
     <string id="53007">Usar nome da pasta como crc</string>
     <string id="53008">Usar nome do ficheiro como crc</string>
-    <string id="53009">Remover scraper</string>
-    <string id="53010">Adicionar scraper</string>
+    <string id="53009">Remover colector</string>
+    <string id="53010">Adicionar colector</string>
 
     <!-- info -->
     <string id="54000">Região</string>
@@ -278,8 +288,8 @@
 
     <!-- importdialog -->
     <string id="55000">Importar Jogos</string>
-    <string id="55001">Modo do scraper</string>
-    <string id="55002">Alterar scrapers para esta vez</string>
+    <string id="55001">Modo do colector</string>
+    <string id="55002">Alterar colectores para esta vez</string>
 
     <!-- Missing info filter -->
     <string id="56000">RCB - filtro de info em falta</string>
