--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+2.0.16 (06/2014)
+~~~~~~~~~~~~~
+General:
+  * bugfix: Delete Rom Collection dialog works language independent
+
+Import Games:
+  * bugfix: nfo import was broken with new version of elementtree
+
 2.0.15 (05/2014)
 ~~~~~~~~~~~~~
 General:
