--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+2.0.17 (06/2014)
+~~~~~~~~~~~~~
+Import Games:
+  * bugfix: flatfile scrapers were broken
+
 2.0.16 (06/2014)
 ~~~~~~~~~~~~~
 General:
