--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -185,6 +185,7 @@
 	<string id="45025">Ungefilterte Suche verhindern</string>
 	<string id="45026">Spiele starten</string>
 	<string id="45027">Emulator Kommando maskieren</string>
+	<string id="45028">Maximale Anzahl an Spielen zur Anzeige</string>
 	
 	<!-- GUI controls -->
 	<!-- main window-->
